# qotp

./: .gitignore  CMakeLists.txt  README.md
.githooks/: pre-commit
.githooks/pre-commit-scripts/: git-settings.sh  text-empty-line.sh  text-mixed-indent.sh  text-trailing-whitespaces.sh
.github/workflows/: ci.yml
libqotp/: CMakeLists.txt
libqotp/include/libqotp/: hotp.h  qotp.h
libqotp/src/: base32.cpp  hotp.cpp  totp.cpp
tests/: CMakeLists.txt  test_hotp.cpp  test_totp.cpp
